cmake_minimum_required(VERSION 2.8)
get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project( ${PROJECT_NAME} CXX)
list(APPEND PATH_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
FILE (GLOB_RECURSE  HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Project1/*.h)
include_directories(${PATH_INCLUDES})
FILE (GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Project1/*.cpp)
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS} )
